<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/paddingPadrao"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="100dp"
        android:text="@string/descricaoConfirma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/numeroConfirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/paddingPadrao"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryText"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/paddingPadrao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:text="       "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="       "
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="       "
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="       "
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/paddingPadrao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/naoRecebeuCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/tenteNovamente"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:onClick="avancar"
        android:id="@+id/btnAvancarConfirmacao"
        android:text="@string/avancar"
        android:layout_marginTop="@dimen/paddingPadrao"
        android:background="@drawable/custom_border_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>